--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /coverage
 
 # production
-/build
+/dist
 
 # misc
 .DS_Store
@@ -18,5 +18,3 @@
 .eslintcache
 
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
