--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@eslint/compat": "^1.1.0",
         "@eslint/js": "^9.5.0",
         "@rollup/plugin-alias": "^5.1.0",
+        "@svgr/plugin-svgo": "^8.1.0",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.10.7",
         "@types/react": "^18.3.3",
@@ -48,6 +49,7 @@
         "typescript": "^5.1.3",
         "typescript-eslint": "^7.13.1",
         "vite": "^5.0.11",
+        "vite-plugin-svgr": "^4.2.0",
         "vite-plugin-webfont-dl": "^3.9.4"
     },
     "lint-staged": {
