--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"],
-            "@themes/*": ["src/themes/*"],
-            "@i18n/*": ["src/i18n/*"]
+            "@assets/*": ["assets/*"]
         },
         "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
