--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
     "name": "Data.Rentgen",
     "icons": [
         {
-            "src": "favicon.ico",
+            "src": "favicon.svg",
             "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/x-icon"
+            "type": "image/svg"
         }
     ],
     "start_url": "./index.html",
