[DOP-21297] Cleanup README

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,8 @@
+# rollup module does not support arm64 for now.
+# use arm64 for building .js and .css (which areplatform agnostic),
+# and then copy to platform-specific nginx image
 FROM --platform=linux/amd64 node:23.1.0 AS build
 
-# set working directory
 WORKDIR /app
 
 COPY package*.json .
