--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@ COPY . .
 RUN npm run build
 
 
-FROM nginx:stable AS prod
+FROM nginx:stable-alpine AS prod
 
 COPY ./docker/nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist /usr/share/nginx/html
