[DOP-21576] Add Keycloak Auth Provider

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,7 +22,9 @@ RUN chmod +x /entrypoint.sh
 
 
 ARG API_URL=http://localhost:8000
+ARG AUTH_PROVIDER=dummyAuthProvider
 ENV DATA_RENTGEN__UI__API_BROWSER_URL=${API_URL}
+ENV DATA_RENTGEN__UI__AUTH_PROVIDER=${AUTH_PROVIDER}
 
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
