--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -34,10 +34,10 @@ jobs:
               run: npm run type-check
 
             - name: Run ESLint
-              run: npx eslint
+              run: npm run lint-check
 
             - name: Run Prettier
-              run: npx prettier --config .prettierrc 'src/**/*.tsx' 'src/**/*.ts' --check
+              run: npm run prettier-check
 
             - name: Build project
               run: npm run build
