--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0",
         "vite": "^6.1.0",
+        "vite-plugin-node-polyfills": "^0.23.0",
         "vite-plugin-svgr": "^4.3.0",
         "vite-plugin-webfont-dl": "^3.10.4"
     },
