[DOP-22580] Fix npm config

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "dev": "vite",
         "prod": "vite --host 0.0.0.0",
         "build": "tsc && vite build",
-        "lint": "eslint --fix",
-        "lint-check": "eslint",
+        "lint": "eslint --fix src/**/*.tsx src/**/*.ts",
+        "lint-check": "eslint src/**/*.tsx src/**/*.ts",
         "type-check": "tsc",
         "preview": "vite preview",
         "prettier-format": "prettier --config .prettierrc 'src/**/*.tsx' 'src/**/*.ts' --write",
