--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.20.0",
+        "eslint-plugin-compat": "^6.0.2",
         "eslint-plugin-react": "^7.37.4",
         "husky": "^9.1.7",
         "lint-staged": "^15.4.3",
@@ -58,5 +59,13 @@
     },
     "lint-staged": {
         "**/*": "prettier --write --ignore-unknown"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "chrome 81",
+            "firefox 88",
+            "not dead"
+        ]
     }
 }
