--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "query-string": "^7.1.3",
         "ra-i18n-polyglot": "^5.5.3",
         "ra-language-english": "^5.5.3",
+        "ra-language-russian": "^5.4.3",
         "react": "^18.3.1",
         "react-admin": "^5.5.3",
         "react-dom": "^18.3.1",
