[DOP-25355] Populate docker image meta

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -17,9 +17,11 @@ jobs:
     linters:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - name: Install modules
-              run: npm ci
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Install Node.JS
+              uses: actions/setup-node@v4
 
             - name: Cache modules
               uses: actions/cache@v4
@@ -29,6 +31,9 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
                       ${{ runner.os }}-npm-
+
+            - name: Install modules
+              run: npm ci
 
             - name: Run Type check
               run: npm run type-check
