--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.2.1",
     "private": true,
     "type": "module",
+    "description": "Frontend for Data.Rentgen",
+    "license": "Apache-2.0",
     "dependencies": {
         "@dagrejs/dagre": "^1.1.4",
         "@mui/icons-material": "^5.16.14",
