[DOP-25347] Do not update major versions in Dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,6 +32,9 @@ updates:
           - type:dependency
       # https://til.simonwillison.net/github/dependabot-python-setup
       groups:
-          python-packages:
+          npm-packages:
               patterns:
                   - "*"
+      ignore:
+          - dependency-name: "*"
+            update-types: ["version-update:semver-major"]
