[DOP-25348] Add HEALTHCHECK

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,3 +30,4 @@ ENV DATA_RENTGEN__UI__AUTH_PROVIDER=${AUTH_PROVIDER}
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
 EXPOSE 3000
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 CMD ["curl", "-f", "http://localhost:3000/"]
