[DOP-25348] Generate SBOM on release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,6 +96,7 @@ jobs:
                   cyclonedx-npm --package-lock-only --omit dev --output-reproducible --output-file sbom.cyclonedx.json
 
             - name: Create Github release
+              if: github.ref_type == 'tag'
               id: create_release
               uses: softprops/action-gh-release@v2
               with:
