--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -16,6 +16,10 @@ concurrency:
 jobs:
     linters:
         runs-on: ubuntu-latest
+
+        permissions:
+            contents: read
+
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
