--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@xyflow/react": "^12.8.1",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
+        "highlight.js": "^11.11.1",
         "inflection": "^3.0.2",
         "query-string": "^7.1.3",
         "ra-i18n-polyglot": "^5.9.0",
@@ -21,7 +22,8 @@
         "react-admin": "^5.9.0",
         "react-dom": "^18.3.1",
         "react-router": "^6.30.1",
-        "react-router-dom": "^6.30.1"
+        "react-router-dom": "^6.30.1",
+        "react-syntax-highlighter": "^15.6.1"
     },
     "scripts": {
         "dev": "vite",
@@ -40,10 +42,12 @@
         "@eslint/js": "^9.30.0",
         "@rollup/plugin-alias": "^5.1.1",
         "@svgr/plugin-svgo": "^8.1.0",
+        "@types/highlight.js": "^9.12.4",
         "@types/jest": "^29.5.14",
         "@types/node": "^20.19.2",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "@vitejs/plugin-react": "^4.6.0",
         "eslint": "^9.30.0",
         "eslint-plugin-compat": "^6.0.2",
