--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "ra-i18n-polyglot": "^5.13.2",
         "ra-language-english": "^5.13.2",
         "ra-language-russian": "^5.4.4",
+        "ra-ui-materialui": "5.12.3",
         "react": "^18.3.1",
         "react-admin": "^5.13.2",
         "react-dom": "^18.3.1",
