--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "data-rentgen",
     "version": "0.4.5",
     "private": true,
-    "type": "module",
     "description": "Frontend for Data.Rentgen",
     "license": "Apache-2.0",
     "dependencies": {
@@ -33,8 +32,8 @@
         "lint-check": "eslint src/**/*.tsx src/**/*.ts",
         "type-check": "tsc",
         "preview": "vite preview",
-        "prettier-format": "prettier --config .prettierrc 'src/**/*.tsx' 'src/**/*.ts' --write",
-        "prettier-check": "prettier --config .prettierrc 'src/**/*.tsx' 'src/**/*.ts' --check",
+        "prettier-format": "prettier 'src/**/*.{ts,tsx,js,json}' --write --list-different",
+        "prettier-check": "prettier 'src/**/*.{ts,tsx,js,json}' --check --list-different",
         "pre-commit-install": "husky"
     },
     "devDependencies": {
