Improve contributor experience

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "dev": "vite",
         "prod": "vite --host 0.0.0.0",
         "build": "tsc && vite build",
-        "lint": "eslint --fix src/**/*.{ts,tsx}",
-        "lint-check": "eslint src/**/*.{ts,tsx}",
+        "lint": "eslint --fix src",
+        "lint-check": "eslint src",
         "type-check": "tsc",
         "preview": "vite preview",
         "prettier": "prettier 'src' 'public' --write --list-different",
